Closed Bug 1351329 Opened 8 years ago Closed 8 years ago

Desktop notifications are appearing in the middle of the screen on Windows 10

Categories

(Toolkit Graveyard :: Notifications and Alerts, defect)

defect
Not set
normal

Tracking

(firefox52 unaffected, firefox-esr52 unaffected, firefox53 unaffected, firefox54 unaffected, firefox55 verified)

VERIFIED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- verified

People

(Reporter: jaws, Assigned: emk)

References

Details

(Keywords: regression)

Attachments

(1 file)

As seen on Firefox Nightly 55.0a1 (2017-03-28) (64-bit) on Windows 10. STR: Show a notification from https://people-mozilla.org/~mnoorenberghe/w3c_notifications.htm Expected: Appears in the bottom right of screen Actual: Appears in the middle of the screen
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Comment on attachment 8852068 [details] Bug 1351329 - Fix Windows implementation of defaultCSSScaleFactor. https://reviewboard.mozilla.org/r/124306/#review126866 Thanks! The original implemention does exactly this.
Attachment #8852068 - Flags: review?(kchen) → review+
Pushed by VYV03354@nifty.ne.jp: https://hg.mozilla.org/integration/autoland/rev/a3b39ebdba02 Fix Windows implementation of defaultCSSScaleFactor. r=kanru
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Flags: needinfo?(kchen)
Flags: qe-verify+
I reproduced this issue using Fx55.0a1(2017-03-28), on Windows 10 x64. I can confirm this issue is fixed, I verified using Fx55.0b3, on Windows 10 x64. Cheers!
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: