Bug 1351329 - Fix Windows implementation of defaultCSSScaleFactor. r=kanru

Unlike contentsScaleFactor, defaultCSSScaleFactor always uses WinUtils::LogToPhysFactor regardless of the DPI awareness. Bug 1194751 broke the implementation (probably unknowingly).

MozReview-Commit-ID: KjtnT2ebgHK